service/tests/requests/snapshots/roles/can_assign_permission_to_role@roles.snap
---
source: tests/requests/roles.rs
expression: "(response.status_code(), response.text())"
---
(
    201,
    "{\"id\":28,\"pid\":\"PID\",\"roleId\":22,\"permissionId\":114,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"}",
)
