service/tests/requests/snapshots/roles/can_create_role_and_normalize_name@roles.snap
---
source: tests/requests/roles.rs
expression: "(response.status_code(), response.text())"
---
(
    201,
    "{\"id\":1,\"pid\":\"PID\",\"name\":\"billing admin\",\"description\":\"Billing team\",\"users\":[],\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"}",
)
