service/tests/requests/snapshots/roles/can_create_role_with_description@roles.snap
---
source: tests/requests/roles.rs
expression: "(response.status_code(), response.text())"
---
(
    201,
    "{\"id\":ID,\"pid\":\"PID\",\"name\":\"warehouse manager\",\"description\":\"Owns warehouse operations\",\"users\":[],\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"}",
)
