service/tests/requests/snapshots/roles/can_create_role_without_description@roles.snap
---
source: tests/requests/roles.rs
expression: "(response.status_code(), response.text())"
---
(
    201,
    "{\"id\":ID,\"pid\":\"PID\",\"name\":\"support agent\",\"description\":null,\"users\":[],\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"}",
)
