service/tests/requests/snapshots/roles/can_get_administrator_role@roles.snap
---
source: tests/requests/roles.rs
expression: "(response.status_code(), response.text())"
---
(
    200,
    "{\"id\":11,\"pid\":\"PID\",\"name\":\"administrator\",\"description\":\"System administrator\",\"users\":[{\"pid\":\"PID\",\"name\":\"System Administrator\",\"email\":\"admin@silk.com\",\"image\":\"https://randomuser.me/api/portraits/men/75.jpg\"}],\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"}",
)
