service/tests/requests/snapshots/roles/can_list_roles@roles.snap
---
source: tests/requests/roles.rs
expression: "(response.status_code(), response.text())"
---
(
    200,
    "[{\"id\":22,\"pid\":\"PID\",\"name\":\"customer\",\"description\":\"Regular shoppers\",\"users\":[{\"pid\":\"PID\",\"name\":\"Jane Smith\",\"email\":\"jane.smith@globex.com\",\"image\":\"https://randomuser.me/api/portraits/women/44.jpg\"},{\"pid\":\"PID\",\"name\":\"John Doe\",\"email\":\"john.doe@acme.com\",\"image\":\"https://randomuser.me/api/portraits/men/32.jpg\"},{\"pid\":\"PID\",\"name\":\"Morgan Grimes\",\"email\":\"morgan@silk.io\",\"image\":\"https://randomuser.me/api/portraits/women/65.jpg\"}],\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"},{\"id\":11,\"pid\":\"PID\",\"name\":\"administrator\",\"description\":\"System administrator\",\"users\":[{\"pid\":\"PID\",\"name\":\"John Doe\",\"email\":\"john.doe@acme.com\",\"image\":\"https://randomuser.me/api/portraits/men/32.jpg\"},{\"pid\":\"PID\",\"name\":\"System Administrator\",\"email\":\"admin@silk.com\",\"image\":\"https://randomuser.me/api/portraits/men/75.jpg\"}],\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"}]",
)
