service/tests/requests/snapshots/roles/can_revoke_permission_from_role@roles.snap
---
source: tests/requests/roles.rs
expression: "(response.status_code(), response.text())"
---
(
    204,
    "",
)
