service/tests/requests/snapshots/roles/can_update_role_and_normalize_name@roles.snap
---
source: tests/requests/roles.rs
expression: "(response.status_code(), response.text())"
---
(
    201,
    "{\"id\":22,\"pid\":\"PID\",\"name\":\"vip customer\",\"description\":\"Priority shoppers\",\"users\":[{\"pid\":\"PID\",\"name\":\"Jane Smith\",\"email\":\"jane.smith@globex.com\",\"image\":\"https://cdn.example.com/users/jane_smith.png\"},{\"pid\":\"PID\",\"name\":\"John Doe\",\"email\":\"john.doe@acme.com\",\"image\":\"https://cdn.example.com/users/john_doe.png\"},{\"pid\":\"PID\",\"name\":\"Morgan Grimes\",\"email\":\"morgan@silk.io\",\"image\":\"https://cdn.example.com/users/morgan_grimes.png\"}],\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"}",
)
