service/tests/requests/snapshots/roles/can_update_role_description@roles.snap
---
source: tests/requests/roles.rs
expression: "(response.status_code(), response.text())"
---
(
    201,
    "{\"id\":22,\"pid\":\"PID\",\"name\":\"customer\",\"description\":\"Both registered shoppers and guest browsers\",\"users\":[{\"pid\":\"PID\",\"name\":\"Jane Smith\",\"email\":\"jane.smith@globex.com\",\"image\":\"https://cdn.example.com/users/jane_smith.png\"},{\"pid\":\"PID\",\"name\":\"John Doe\",\"email\":\"john.doe@acme.com\",\"image\":\"https://cdn.example.com/users/john_doe.png\"},{\"pid\":\"PID\",\"name\":\"Morgan Grimes\",\"email\":\"morgan@silk.io\",\"image\":\"https://cdn.example.com/users/morgan_grimes.png\"}],\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"}",
)
