service/tests/requests/snapshots/roles/can_update_role_name@roles.snap
---
source: tests/requests/roles.rs
expression: "(response.status_code(), response.text())"
---
(
    201,
    "{\"id\":22,\"pid\":\"PID\",\"name\":\"buyer\",\"description\":\"Regular shoppers\",\"users\":[{\"pid\":\"PID\",\"name\":\"James Moriaty\",\"email\":\"james.moriaty@continental.org\",\"image\":\"https://randomuser.me/api/portraits/men/46.jpg\"},{\"pid\":\"PID\",\"name\":\"Jane Smith\",\"email\":\"jane.smith@globex.com\",\"image\":\"https://randomuser.me/api/portraits/women/44.jpg\"},{\"pid\":\"PID\",\"name\":\"Morgan Grimes\",\"email\":\"morgan@mail.io\",\"image\":\"https://randomuser.me/api/portraits/women/65.jpg\"}],\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"}",
)
